# xsynth

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Ordinals.def  README.md  build.rs
.cargo/: config.toml
.github/workflows/: check.yml  deploy.yml  publish.yml
clib/: Cargo.toml  README.md  build.rs  cbindgen.toml
clib/src/: consts.rs  group.rs  handles.rs  lib.rs  realtime.rs  soundfont.rs  utils.rs
core/: Cargo.toml  README.md
core/benches/: render.rs  send_events.rs
core/examples/: core_benchmark.rs  core_samples_per_second.rs
core/src/: audio_pipe.rs  audio_stream.rs  buffered_renderer.rs  channel.rs  control.rs  effects.rs  helpers.rs  lib.rs  soundfont.rs  threaded_ref_cell.rs  voice.rs
core/src/channel/: channel_sf.rs  event.rs  key.rs  mod.rs  params.rs  voice.rs  voice_buffer.rs  voice_spawner.rs
core/src/channel/voice/: base.rs  channels.rs  constant.rs  control.rs  envelopes.rs  sampler.rs  simd.rs  simdvoice.rs  squarewave.rs
core/src/channel_group/: config.rs  events.rs  mod.rs
core/src/effects/: cutoff.rs  filter.rs  filters.rs  limiter.rs
core/src/effects/filters/: butterworth.rs  highpole.rs  lowpole.rs
core/src/helpers/: frequencies.rs  simd.rs
core/src/soundfont/: audio.rs  config.rs  mod.rs  utils.rs  voice_spawners.rs
core/src/soundfont/audio/: resample.rs  wav.rs
core/src/soundfont/voice_spawners/: mono.rs  stereo.rs
core/src/voice/: base.rs  channels.rs  constant.rs  control.rs  cutoff.rs  envelopes.rs  sampler.rs  simd.rs  simdvoice.rs  squarewave.rs
core/src/voice/sampler/: linear.rs  nearest.rs
daw-plugin/: Cargo.toml  README.md  bundler.toml
daw-plugin/.cargo/: config
daw-plugin/src/: lib.rs
daw-plugin/xtask/: Cargo.toml
daw-plugin/xtask/src/: main.rs
examples/: bench.rs  midi.rs  sf.rs  test.rs
interface/: Cargo.toml  README.md
interface/src/: main.rs  parsers.rs
interface/src/parsers/: settings.rs
kdmapi/: Cargo.toml  README.md  build.rs  rustfmt.toml
kdmapi/src/: lib.rs  parsers.rs
kdmapi/src/parsers/: soundfonts.rs
realtime/: Cargo.toml  README.md
realtime/examples/: bench.rs  midi.rs  midi2.rs  sf.rs  test.rs  unload.rs  write-to-wav.rs
realtime/src/: config.rs  event.rs  event_senders.rs  lib.rs  realtime_synth.rs  util.rs
render/: Cargo.toml  README.md
render/examples/: limiter.rs  render.rs  render_dialog.rs
render/src/: builder.rs  config.rs  lib.rs  main.rs  rendered.rs  sender.rs  utils.rs  writer.rs
soundfonts/: Cargo.toml  README.md
soundfonts/benches/: parse.rs
soundfonts/examples/: sfz.rs  test.rs
soundfonts/soundfonts_macro/: Cargo.toml
soundfonts/soundfonts_macro/src/: lib.rs
soundfonts/src/: lib.rs  resample.rs
soundfonts/src/sf2/: instrument.rs  mod.rs  preset.rs  sample.rs  sfbk.rs  zone.rs
soundfonts/src/sf2/sfbk/: pdta.rs  sdta.rs
soundfonts/src/sfz/: consts.rs  lexer.rs  mod.rs  parse.rs
soundfonts/src/sfz/grammar/: helpers.rs  mod.rs  opcode_simd.rs
src/: core.rs  event.rs  helpers.rs  lib.rs  realtime_synth.rs  shared.rs
src/core/: audio_pipe.rs  buffered_renderer.rs  channel.rs  effects.rs  sample.rs  soundfont.rs
src/core/channel/: channel_sf.rs  event.rs  key.rs  params.rs  voice.rs  voice_buffer.rs  voice_spawner.rs
src/core/channel/voice/: base.rs  channels.rs  constant.rs  control.rs  envelopes.rs  sampler.rs  simd.rs  simdvoice.rs  squarewave.rs
src/core/channel/voice/sampler/: linear.rs
src/core/effects/: limiter.rs
src/core/soundfont/: audio.rs
