[workspace]
resolver = "2"
members = ["core", "realtime", "soundfonts", "render"]

[workspace.package]
authors = ["Arduano", "MBMS", "Kaydax", "Khangaroo"]
version = "0.2.0"
license = "LGPL-3.0"
edition = "2021"
homepage = "https://github.com/BlackMIDIDevs/xsynth"
repository = "https://github.com/BlackMIDIDevs/xsynth"
readme = "README.md"
keywords = ["midi", "synthesizer", "soundfont"]
categories = ["multimedia::audio"]

[profile.release]
codegen-units = 1
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies]
xsynth-core = { version = "0.2.0", path = "core" }
xsynth-realtime = { version = "0.2.0", path = "realtime" }
xsynth-soundfonts = { version = "0.2.0", path = "soundfonts" }
