[workspace]
resolver = "2"
members = ["core", "clib", "soundfonts", "realtime", "render", "kdmapi", "interface"]

[workspace.package]
version = "0.3.4"
license = "LGPL-3.0"
edition = "2021"
homepage = "https://github.com/BlackMIDIDevs/xsynth"
repository = "https://github.com/BlackMIDIDevs/xsynth"
keywords = ["midi", "synthesizer", "soundfont"]
categories = ["multimedia::audio"]

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies]
xsynth-core = { version = "0.3.4", path = "core" }
xsynth-realtime = { version = "0.3.4", path = "realtime" }
xsynth-soundfonts = { version = "0.3.4", path = "soundfonts" }
