[package]
name = "xsynth-clib"
description = "C/C++ bindings for XSynth"
authors = ["MBMS"]
readme = "README.md"
publish = false

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "xsynth"
crate-type = ["cdylib"]

[dependencies]
pkg-version = "1.0.0"
xsynth-core = { workspace = true }
xsynth-realtime = { workspace = true }

[build-dependencies]
cbindgen = "0.26.0"
pkg-version = "1.0.0"