[package]
name = "xsynth-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.7"
bytemuck = "1.7.2"
crossbeam-channel = "0.5.1"
lazy_static = "1.4.0"
soundfonts = { path = "../soundfonts", package = "xsynth-soundfonts" }
rayon = "1.5.1"
spin_sleep = "1.0.0"
to_vec = "0.1.0"
thiserror = "1.0.31"
symphonia = "0.5.1"
biquad = "0.4.2"
simdeez = { git = "https://github.com/arduano/simdeez.git", rev = "2f94d88" }

[dev-dependencies]
midi-toolkit-rs = { git = "https://github.com/arduano/midi-toolkit-rs", rev = "51ff0dc" }
rand = "0.8.5"
criterion = "0.4.0"

[[bench]]
name = "render"
harness = false

[[bench]]
name = "send_events"
harness = false
