[package]
name = "xsynth-core"
description = "A fast Rust-based SoundFont synthesizer designed for high voice counts and low latency."

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
atomic_refcell = "0.1.7"
bytemuck = "1.7.2"
crossbeam-channel = "0.5.1"
lazy_static = "1.4.0"
soundfonts = { path = "../soundfonts", package = "xsynth-soundfonts", version = "0.1.0" }
rayon = "1.5.1"
spin_sleep = "1.0.0"
to_vec = "0.1.0"
thiserror = "1.0.31"
symphonia = "0.5.1"
biquad = "0.4.2"
simdeez = "2.0.0-dev3"
proc-macro2 = "1.0.63"

[dev-dependencies]
midi-toolkit-rs = "0.1.0"
rand = "0.8.5"
criterion = "0.4.0"

[[bench]]
name = "render"
harness = false

[[bench]]
name = "send_events"
harness = false
