[package]
name = "xsynth-core"
description = "A fast Rust-based SoundFont synthesizer designed for high voice counts and low latency."

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
atomic_refcell = "0.1.13"
bytemuck = "1.16.3"
crossbeam-channel = "0.5.13"
lazy_static = "1.5.0"
xsynth-soundfonts = { workspace = true }
rayon = "1.10.0"
spin_sleep = "1.2.1"
to_vec = "0.1.0"
thiserror = "1.0.63"
symphonia = "0.5.4"
biquad = "0.4.2"
simdeez = "2.0.0-dev3"
proc-macro2 = "1.0.86"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]

[dev-dependencies]
midi-toolkit-rs = "0.1.0"
rand = "0.8.5"
criterion = "0.5.1"

[[bench]]
name = "render"
harness = false

[[bench]]
name = "send_events"
harness = false
