[package]
name = "xsynth-interface"
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xsynth-core = { workspace = true, features = ["serde"] }
xsynth-realtime = { workspace = true, features = ["serde"] }
midir = { version = "0.10.1" }
cfg-if = "1.0.0"
serde_json = "1.0.122"
serde = { version = "1.0.206", features = ["derive"] }
hotwatch = "0.5.0"
directories = "6.0.0"
