[package]
name = "kdmapi"
version = "0.1.0"
edition = "2021"

[lib]
name = "OmniMIDI"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xsynth-core = { path = "../core" }
realtime = { path = "../realtime", package = "xsynth-realtime" }
winapi = { version = "0.3.9", features = ["synchapi", "winuser"] }
cfg-if = "1.0.0"
