[package]
name = "kdmapi"
description = "A cdylib wrapper around real-time to act as a drop-in replacement for OmniMIDI."

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "OmniMIDI"
crate-type = ["cdylib"]

[dependencies]
xsynth-core = { path = "../core", version = "0.1.0" }
realtime = { path = "../realtime", package = "xsynth-realtime", version = "0.1.0" }
winapi = { version = "0.3.9", features = ["synchapi", "winuser"] }
cfg-if = "1.0.0"
