[package]
name = "xsynth-realtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.7"
bytemuck = "1.7.2"
cpal = "0.14.1"
crossbeam-channel = "0.5.1"
lazy_static = "1.4.0"
rayon = "1.5.3"
spin_sleep = "1.0.0"
to_vec = "0.1.0"
wav = "1.0.0"
core = { path = "../core", package = "xsynth-core" }

[dev-dependencies]
midi-toolkit-rs = { git = "https://github.com/arduano/midi-toolkit-rs", rev = "907dec1" }
gen-iter = "0.2.1"

[build-dependencies]
cbindgen = "0.24.3"
