[package]
name = "xsynth-realtime"
description = "A real-time MIDI synthesizer using XSynth."

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
atomic_refcell = "0.1.7"
bytemuck = "1.7.2"
cpal = "0.15.2"
crossbeam-channel = "0.5.1"
lazy_static = "1.4.0"
rayon = "1.5.3"
spin_sleep = "1.0.0"
to_vec = "0.1.0"
wav = "1.0.0"
xsynth-core = { path = "../core" }

[dev-dependencies]
midi-toolkit-rs = { git = "https://github.com/arduano/midi-toolkit-rs.git", rev = "26747a3" }
gen-iter = { git = "https://github.com/arduano/gen-iter.git", rev = "64e28bc" }

[build-dependencies]
cbindgen = "0.26.0"
