[package]
name = "xsynth-realtime"
description = "A real-time MIDI synthesizer using XSynth."

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
atomic_refcell = "0.1.13"
bytemuck = "1.16.3"
cpal = "0.15.3"
crossbeam-channel = "0.5.13"
lazy_static = "1.5.0"
rayon = "1.10.0"
spin_sleep = "1.2.1"
to_vec = "0.1.0"
wav = "1.0.1"
xsynth-core = { workspace = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde", "xsynth-core/serde"]

[dev-dependencies]
midi-toolkit-rs = "0.1.0"

[build-dependencies]
cbindgen = "0.26.0"
