[package]
name = "xsynth-render"
description = "An XSynth module for rendering audio to a file."

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xsynth-core = { path = "../core", version = "0.1.0" }
crossbeam-channel = "0.5.1"
hound = "3.5.0"
rayon = "1.5.3"
midi-toolkit-rs = "0.1.0"
spin_sleep = "1.0.0"
atomic_float = "0.1.0"
thiserror = "1.0.31"
