[package]
name = "xsynth-render"
description = "An XSynth module for rendering audio to a file."

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xsynth-core = { workspace = true }
crossbeam-channel = "0.5.13"
hound = "3.5.1"
rayon = "1.10.0"
midi-toolkit-rs = "0.1.0"
spin_sleep = "1.2.1"
atomic_float = "1.0.0"
thiserror = "1.0.63"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde", "xsynth-core/serde"]