[package]
name = "xsynth-soundfonts"
description = "A module to parse different types of soundfonts to be used in XSynth."

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
lazy-regex = "3.0.2"
regex-bnf = "0.1.2"
simdeez = "2.0.0-dev3"
thiserror = "1.0.38"
soundfont = "0.0.3"
rubato = "0.15.0"
